--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
       <artifactId>commons-collections4</artifactId>
       <version>${commons-collections4.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot</artifactId>
+      <version>3.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
